--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ Data/GeneticAgent/ga_data
 Data/GeneticAgent/sa_data
 Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
+Data/TestAgentParam/learning_data_rand_double
