--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ CMakeLists.txt.user*
 
 Data/GeneticAgent/ga_data
 Data/GeneticAgent/sa_data
+Data/TestAgentParam/learning_data_fix
+Data/TestAgentParam/learning_data_rand
+Data/TestAgentParam/learning_data_rand_double
