--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Data/GeneticAgent/sa_data
 Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
+Data/TestOptimazationFunction/*
