--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
 Data/TestOptimazationFunction/*
+Python/__pycache__/*
