--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,6 @@ Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
 Data/TestOptimazationFunction/*
+
 Python/__pycache__/*
+Python/const.py
