--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# C++ objects and libs
-
 *.slo
 *.lo
 *.o
@@ -45,3 +43,8 @@ Data/GeneticAgent/sa_data
 Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
+Data/TestOptimazationFunction/*
+Data/chainerrl/*
+
+Python/__pycache__/*
+Python/const.py
