--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
 Data/TestOptimazationFunction/*
+Data/TestAlgorithmPlayout/result.csv
 Data/chainerrl/*
 
 Python/__pycache__/*
