--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# C++ objects and libs
+
 *.slo
 *.lo
 *.o
@@ -44,8 +46,3 @@ Data/TestAgentParam/learning_data_fix
 Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
 Data/TestOptimazationFunction/*
-Data/TestAlgorithmPlayout/result.csv
-Data/chainerrl/*
-
-Python/__pycache__/*
-Python/const.py
