--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ Data/TestAgentParam/learning_data_rand
 Data/TestAgentParam/learning_data_rand_double
 Data/TestOptimazationFunction/*
 Data/TestAlgorithmPlayout/*
+
+# GNU GLOBAL
+GPATH
+GRTAGS
+GTAGS
